# nvim

./: init.lua  lazy-lock.json
lua/: G.lua  autocmd.lua  keymaps.lua  options.lua
lua/plugins/: cmp.lua  colorscheme.lua  format.lua  indent.lua  lsp.lua  lualine.lua  markdown.lua  mini_nvim.lua  mininvim.lua  neo-tree.lua  telescope.lua  treesitter.lua  vimtex.lua
lua/plugins/snippets/: cpp.json  package.json
template/: .clang-format  CMakeLists.txt  cli_c
